# Project-FEx

./: pom.xml
near-blockchain-project/: package.json  (+2 more)
near_contract/: Cargo.toml
near_contract/output/: .rustc_info.json
near_contract/output/release/.fingerprint/borsh-derive-e1bf18d69a48c681/: lib-borsh-derive
near_contract/output/release/.fingerprint/borsh-derive-internal-842c2f78e286dd91/: lib-borsh-derive-internal  lib-borsh-derive-internal.json
near_contract/output/release/.fingerprint/borsh-schema-derive-internal-ca237b90e0faebf5/: lib-borsh-schema-derive-internal  lib-borsh-schema-derive-internal.json
near_contract/output/release/.fingerprint/near-sdk-macros-a9beb76d0e2293cd/: lib-near-sdk-macros
near_contract/output/release/.fingerprint/proc-macro2-0bf3cb8094d7004c/: lib-proc-macro2.json
near_contract/output/release/.fingerprint/quote-4a3c4b9a31eca056/: lib-quote  lib-quote.json
near_contract/output/release/.fingerprint/serde-46a7c8f7e9b125d4/: build-script-build-script-build  build-script-build-script-build.json
near_contract/output/release/.fingerprint/serde-904bffb4bfff5a6c/: build-script-build-script-build.json
near_contract/output/release/.fingerprint/serde-eb76331f5cf8edfa/: lib-serde.json
near_contract/output/release/.fingerprint/serde_json-531733fbbf656182/: build-script-build-script-build.json
near_contract/output/release/.fingerprint/syn-01f17c2e0b8b749f/: build-script-build-script-build.json
near_contract/output/release/.fingerprint/syn-0cf00c9447a83489/: lib-syn.json
near_contract/output/release/.fingerprint/syn-ae9695bedb508b5d/: lib-syn  lib-syn.json
near_contract/output/release/.fingerprint/toml-62d3837cea782498/: lib-toml  lib-toml.json
near_contract/output/wasm32-unknown-unknown/release/: libnear_contract.d
near_contract/src/: lib.rs
rust_contract/: Cargo.toml
rust_contract/src/: Investor.rs  Startup.rs  agreement_status.rs  campaign.rs  investment_agreement.rs  lib.rs  startup.rs
(+107 files in other folders)
