[package]
name = "rust_contract"
version = "0.1.0"
edition = "2021"  # Updated to use the latest Rust edition

[lib]
name = "rust_contract"
path = "src/lib.rs"



[dependencies]
ink = { version = "4.2.0", default-features = false }  # Simplified Ink! dependency

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

[profile.release]
panic = "abort"  # Required to minimize the Wasm size
lto = true       # Optimize for size
opt-level = "z"  # Optimize for size

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]

