[package]
name = "rust_contract"
version = "0.1.0"
edition = "2021"
authors = ["zeeshan <zeeshanaqibsyed@gmail.com>"]

[lib]
name = "rust_contract"
path = "src/lib.rs"

[dependencies]
ink = { version = "4.2.0", default-features = false }
ink_env = { version = "4.2.0", default-features = false }
ink_storage = { version = "4.2.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"] }

[profile.release]
panic = "abort"
lto = true
opt-level = "z"

[features]
default = ["std"]
std = [
    "ink/std",
    "ink_env/std",
    "ink_storage/std",
    "scale/std",
    "scale-info/std"
]
